syntax = "proto3";

package netsvr.router;

option go_package = "internal/protocol;protocol";

//worker能够处理的指令，分为三块：1、worker单向转发给business的指令，2、business单向请求worker的指令，3、business请求worker，worker再响应business的指令
enum Cmd {
  //--------------------------------worker单向转发给business的指令 开始--------------------------------
  Transfer = 0;//透传客户数据
  ConnClose = 1;//连接关闭
  ConnOpen = 2; //连接打开
  //--------------------------------worker单向转发给business的指令 结束--------------------------------

  //--------------------------------business单向请求worker的指令 开始--------------------------------
  Register = 101; //注册business到worker，注册后，business会收到worker转发的客户信息
  Unregister = 102; //取消注册，取消后不会再收到客户信息
  InfoUpdate = 103;//更新连接的info信息
  InfoDelete = 104;//删除连接的info信息
  Broadcast = 105; //广播
  Multicast = 106; //组播
  SingleCast = 107;//单播
  TopicSubscribe = 108;//订阅
  TopicUnsubscribe = 109;//取消订阅
  TopicDelete = 110;//删除主题
  TopicPublish = 111;//发布
  ForceOffline = 112;//强制关闭某个连接
  //--------------------------------business单向请求worker的指令 结束--------------------------------

  //--------------------------------business请求worker，worker再响应business的指令 开始--------------------------------
  TotalUniqIdsRe = 201; //获取网关中全部的uniqId
  TopicUniqIdsRe = 202; //获取网关中主题包含的uniqId
  TopicsUniqIdCountRe = 203; //获取网关中的某几个主题的uniqId数量
  InfoRe = 204; //获取连接的信息
  NetSvrStatusRe = 205; //获取网关的状态
  CheckOnlineRe = 206; //判断uniqId是否在网关中
  //--------------------------------business请求worker，worker再响应business的指令 结束--------------------------------
}

//路由
message Router {
  //命令
  Cmd cmd = 1;
  //命令携带的数据
  bytes data = 2;
}